[package]
name = "RCraft"
version = "0.8.0"
edition = "2024"
description = "Minecraft Launcher for Linux"
license = "GPL-3.0"
authors = ["vdkvdev"]
default-run = "RCraft"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
zip = "0.6"

gtk4 = { version = "0.9", package = "gtk4" }
relm4 = { version = "0.9", features = ["macros"] }
relm4-macros = "0.9"
glib = "0.20"
adw = { version = "0.7", package = "libadwaita", features = ["v1_2", "v1_4"] }


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
